# OpenBBTerminal

./: CLAUDE.md
.claude/commands/: compare.md  crypto.md  earnings.md  economy.md  insider.md  news.md  options.md  portfolio.md  screener.md  setup-openbb.md  stock.md  technical.md
conductor/: product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: python.md
conductor/tracks/options_research_suite_20251227/: metadata.json  plan.md  research_notes.md  spec.md
frontend-components/options-research/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend-components/options-research/src/: App.tsx  index.css
frontend-components/options-research/src/components/AnalysisPanel/: CatalystBadge.tsx  ExpectedMoveBar.tsx  IVGauge.tsx  index.tsx
frontend-components/options-research/src/components/Controls/: ParameterSlider.tsx  ProviderSelect.tsx  SettingsPanel.tsx  StrategyFilter.tsx  index.tsx
frontend-components/options-research/src/components/DiscoveryPanel/: index.tsx
frontend-components/options-research/src/components/TradePanel/: QualityStars.tsx  TradeIdeaCard.tsx  index.tsx
frontend-components/options-research/src/utils/: formatters.ts
openbb_platform/: dev_install.py
openbb_platform/providers/nih/: README.md  __init__.py  pyproject.toml
openbb_platform/providers/nih/openbb_nih/: __init__.py
openbb_platform/providers/nih/openbb_nih/models/: __init__.py  clinical_trials.py
openbb_platform/providers/nih/tests/: __init__.py  test_nih_fetchers.py
(+10 files in other folders)
