[tool.poetry]
name = "openbb-nih"
version = "1.0.0"
description = "NIH (National Institutes of Health) Data Extension for OpenBB"
authors = ["OpenBB <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_nih" }]

[tool.poetry.dependencies]
python = ">=3.9.21,<3.14"
openbb-core = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
nih = "openbb_nih:nih_provider"
